<resources>
    <string name="app_name">Stress Management App</string>
    <string name="title_measure">Measure</string>
    <string name="title_monitoring">Monitoring</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_setting">Setting</string>
    <string name="userID"></string>
    <string name="info_no_pairing_record">You haven’t pairing with other yet</string>

    <!--localhost  http://192.168.1.5:8080    UAT   https://stressmanagementapiserver.azurewebsites.net/-->

    <!--
    <string name="api_path">http://192.168.137.1:8080</string>
    <string name="web_socket_endpoint">http://192.168.137.1:5000/realTimeData</string>
    -->

    <string name="api_path">http://192.168.1.5:8080</string>
    <string name="web_socket_endpoint">http://192.168.1.5:5000</string>

    <!--   start realtime measuring page-->
    <string name="btn_start_measure_label">Start</string>
    <string name="btn_pause_measure_label">Pause</string>
    <string name="btn_stop_measure_label">Stop</string>

    <string name="realtime_measure_card_instantBPM_title">Instant BPM:</string>
    <string name="realtime_measure_card_highestBPM_title">Highest BPM:</string>
    <string name="realtime_measure_card_lowestBPM_title">Lowest BPM:</string>

    <string name="realtime_measure_card_instantStressLevel_title">Instant Stress Level:</string>
    <string name="realtime_measure_card_highestStressLevel_title">Highest Stress Level:</string>
    <string name="realtime_measure_card_lowestStressLevel_title">Lowest Stress Level:</string>

    <string name="realtime_measure_card_instantFatigueLevel_title">Instant Fatigue Level:</string>
    <string name="realtime_measure_card_highestFatigueLevel_title">Highest Fatigue Level:</string>
    <string name="realtime_measure_card_lowestFatigueLevel_title">Lowest Fatigue Level:</string>

    <string name="realtime_measure_loading_label">Loading ...</string>
    <!--   end realtime measuring page-->

    <!--   start schedule realtime measuring page-->
    <string name="inputEventNameHint">Event Name</string>
    <string name="inputLocationHint">Location</string>
    <string name="fromDateLabel">Start</string>
    <string name="fromDateNowLabel">Start immediately</string>
    <string name="endDateLabel">End</string>
    <string name="addScheduleBtnLabel">Save</string>
    <string name="resetScheduleBtnLabel">Clear</string>
    <string-array name="scheduledRecordSortBy">
        <item>Date (ASC)</item>
        <item>Date (DSC)</item>
        <item>Activity Name(ASC)</item>
        <item>Activity Name(DSC)</item>
    </string-array>


    <string-array name="measuredRecordSortBy">
        <item>Date (DSC)</item>
        <item>Date (ASC)</item>

        <item>Activity Name(ASC)</item>
        <item>Activity Name(DSC)</item>

        <item>Category(ASC)</item>
        <item>Category(DSC)</item>

        <item>AVG BPM(ASC)</item>
        <item>AVG BPM(DSC)</item>
        <item>AVG PPI(ASC)</item>
        <item>AVG PPI(DSC)</item>
        <item>AVG Stress Level(ASC)</item>
        <item>AVG Stress Level(DSC)</item>

        <item>L. BPM(ASC)</item>
        <item>L. BPM(DSC)</item>
        <item>L. PPI(ASC)</item>
        <item>L. PPI(DSC)</item>
        <item>L. Stress Level(ASC)</item>
        <item>L. Stress Level(DSC)</item>

        <item>H. BPM(ASC)</item>
        <item>H. BPM(DSC)</item>
        <item>H. PPI(ASC)</item>
        <item>H. PPI(DSC)</item>
        <item>H. Stress Level(ASC)</item>
        <item>H. Stress Level(DSC)</item>
    </string-array>

    <string-array name="measuredRecordSortByWithoutCategory">
        <item>Date (DSC)</item>
        <item>Date (ASC)</item>

        <item>Activity Name(ASC)</item>
        <item>Activity Name(DSC)</item>


        <item>AVG BPM(ASC)</item>
        <item>AVG BPM(DSC)</item>
        <item>AVG PPI(ASC)</item>
        <item>AVG PPI(DSC)</item>
        <item>AVG Stress Level(ASC)</item>
        <item>AVG Stress Level(DSC)</item>

        <item>L. BPM(ASC)</item>
        <item>L. BPM(DSC)</item>
        <item>L. PPI(ASC)</item>
        <item>L. PPI(DSC)</item>
        <item>L. Stress Level(ASC)</item>
        <item>L. Stress Level(DSC)</item>

        <item>H. BPM(ASC)</item>
        <item>H. BPM(DSC)</item>
        <item>H. PPI(ASC)</item>
        <item>H. PPI(DSC)</item>
        <item>H. Stress Level(ASC)</item>
        <item>H. Stress Level(DSC)</item>
    </string-array>

    <!--   end schedule realtime measuring page-->

    <!-- Stat Page-->
    <string name="statLabel_activity">Activity</string>
    <string name="statLabel_BPM">BPM</string>
    <string name="statLabel_stressLevel">Stress Level</string>

    <!-- Stat Page Activity-->
    <string name="statLabel_activity_positive">Positive Result</string>
    <string name="statLabel_activity_negative">Negative Result</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="preference_file_key">com.example.stressmanagementapp.PREFERENCE_FILE_KEY</string>


</resources>