<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/measuringData"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lineChartLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/hr_line_chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChartLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/BPMLevelCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardViewContainer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#56E8B3">

                <TextView
                    android:id="@+id/measureBPMTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/realtime_measure_card_instantBPM_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/measureBPMTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/realtime_measure_card_highestBPM_title"
                    app:layout_constraintStart_toStartOf="@+id/measureBPMTitle1"
                    app:layout_constraintTop_toBottomOf="@+id/measureBPMTitle1" />

                <TextView
                    android:id="@+id/measureBPMTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/realtime_measure_card_lowestBPM_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/measureBPMTitle2"
                    app:layout_constraintTop_toBottomOf="@+id/measureBPMTitle2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/stressLevelCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/BPMLevelCard"
            app:layout_constraintTop_toBottomOf="@+id/BPMLevelCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardViewContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFF00">

                <TextView
                    android:id="@+id/measureStressTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/realtime_measure_card_instantBPM_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/measureStressTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/realtime_measure_card_highestBPM_title"
                    app:layout_constraintStart_toStartOf="@+id/measureStressTitle1"
                    app:layout_constraintTop_toBottomOf="@+id/measureStressTitle1" />

                <TextView
                    android:id="@+id/measureStreeTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/realtime_measure_card_lowestStressLevel_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/measureStressTitle2"
                    app:layout_constraintTop_toBottomOf="@+id/measureStressTitle2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fatigueLevelCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/stressLevelCard"
            app:layout_constraintTop_toBottomOf="@+id/stressLevelCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardViewContainer3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFF00">

                <TextView
                    android:id="@+id/measureFatigueTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/realtime_measure_card_instantFatigueLevel_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/measureFatigueTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/realtime_measure_card_highestFatigueLevel_title"
                    app:layout_constraintStart_toStartOf="@+id/measureFatigueTitle1"
                    app:layout_constraintTop_toBottomOf="@+id/measureFatigueTitle1" />

                <TextView
                    android:id="@+id/measureFatigueTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/realtime_measure_card_lowestFatigueLevel_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/measureFatigueTitle2"
                    app:layout_constraintTop_toBottomOf="@+id/measureFatigueTitle2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>